Standardize YAML formatting of OAS

--- a/definitions/vonage-business-cloud/account.yml
+++ b/definitions/vonage-business-cloud/account.yml
@@ -5,55 +5,55 @@ info:
   title: Account API
   description: Retrieve information about accounts.
   contact:
-    name: "Account API"
-    url: "https://businesssupport.vonage.com/contactus"
+    name: 'Account API'
+    url: 'https://businesssupport.vonage.com/contactus'
   license:
-    name: "Vonage"
-    url: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
+    name: 'Vonage'
+    url: 'https://www.vonage.com/business/legal-policy-center/business-cloud/tos'
 
 servers:
-- url: "https://api.vonage.com/t/vbc.prod/provisioning"  
+- url: 'https://api.vonage.com/t/vbc.prod/provisioning'  
 paths:
 
-  "/api/accounts/{account_id}":
+  '/api/accounts/{account_id}':
     get:
       operationId: AccountCtrl.getAccountServicesByAccountID
       parameters:
-        - $ref: "#/components/parameters/AccountID"
+        - $ref: '#/components/parameters/AccountID'
       responses:
         '200':
           description: Success
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/AccountHalResponse"
+                $ref: '#/components/schemas/AccountHalResponse'
         '404':
           description: Account not found
       security:
         - bearerAuth: []
       summary: Get account data by ID
 
-  "/api/accounts/{account_id}/locations":
+  '/api/accounts/{account_id}/locations':
     get:
       operationId: AccountCtrl.getLocationsByAccountID
       parameters:
-        - $ref: "#/components/parameters/AccountID"
+        - $ref: '#/components/parameters/AccountID'
       responses:
         '200':
           description: Success
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/LocationsHalResponse"
+                $ref: '#/components/schemas/LocationsHalResponse'
       security:
         - bearerAuth: []
       summary: Get account locations data by account ID
 
-  "/api/accounts/{account_id}/locations/{location_id}":
+  '/api/accounts/{account_id}/locations/{location_id}':
     get:
       operationId: AccountCtrl.getLocationByID
       parameters:
-        - $ref: "#/components/parameters/AccountID"
+        - $ref: '#/components/parameters/AccountID'
         - in: path
           name: location_id
           required: true
@@ -67,7 +67,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/LocationHalResponse"
+                $ref: '#/components/schemas/LocationHalResponse'
         '404':
           description: Location not found
       security:
@@ -94,71 +94,77 @@ components:
 
   schemas:
     FirstHref:
+      type: object
       properties:
         href:
           type: string
       description: URL to the first page of records
     PrevHref:
+      type: object
       properties:
         href:
           type: string
       description: URL to the previous page of records
     SelfHref:
+      type: object
       properties:
         href:
           type: string
       description: URL to the current page of records
     NextHref:
+      type: object
       properties:
         href:
           type: string
       description: URL to the next page of records
     LastHref:
+      type: object
       properties:
         href:
           type: string
       description: URL to the last page of records                                
     Links:
+      type: object    
       properties:
         first:
-          $ref: "#/components/schemas/FirstHref"
+          $ref: '#/components/schemas/FirstHref'
         prev:       
-          $ref: "#/components/schemas/PrevHref"
+          $ref: '#/components/schemas/PrevHref'
         self:       
-          $ref: "#/components/schemas/SelfHref"
+          $ref: '#/components/schemas/SelfHref'
         next:       
-          $ref: "#/components/schemas/NextHref"
+          $ref: '#/components/schemas/NextHref'
         last:       
-          $ref: "#/components/schemas/LastHref"          
-      type: object
+          $ref: '#/components/schemas/LastHref'          
 
     Address:
+      type: object    
       properties:
         address_1:
           type: string
-          example: "123 Example Street"
+          example: '123 Example Street'
           description: Street portion of the address
         address_2:
           type: string
-          example: "Apt. 456"
+          example: 'Apt. 456'
           description: Additional address information
         country:
           type: string
-          example: "US"
+          example: 'US'
           description: Country code
         state:
           type: string
-          example: "NJ"
+          example: 'NJ'
           description: State/Province code
         city:
           type: string
-          example: "Holmdel"
+          example: 'Holmdel'
           description: City name
         postal_code:
           type: string
-          example: "07733"
+          example: '07733'
           description: Postal code
-      type: object
+
 
     Account:
       properties:
@@ -168,56 +174,57 @@ components:
           description: Unique identifier of the account
         name:
           type: string
-          example: "Vonage"
+          example: 'Vonage'
           description: Name of the account
         status:
           type: string
-          example: "ACTIVE"
+          example: 'ACTIVE'
           description: Status of the account
         address:
-          $ref: "#/components/schemas/Address"
+          $ref: '#/components/schemas/Address'
       type: object
 
     AccountEmbeddedObject:
+      type: object
       properties:
         data:
-          $ref: "#/components/schemas/Account"
-      type: object
+          $ref: '#/components/schemas/Account'
       description: Account object
 
     AddressWithTimeZone:
+      type: object    
       properties:
         address_1:
           type: string
-          example: "123 Example Street"
+          example: '123 Example Street'
           description: Street portion of the address
         address_2:
           type: string
-          example: "Apt. 456"
+          example: 'Apt. 456'
           description: Additional address information
         country:
           type: string
-          example: "US"
+          example: 'US'
           description: Country code
         state:
           type: string
-          example: "NJ"
+          example: 'NJ'
           description: State/Province code
         city:
           type: string
-          example: "Holmdel"
+          example: 'Holmdel'
           description: City name
         postal_code:
           type: string
-          example: "07733"
+          example: '07733'
           description: Postal code
         time_zone:
           type: string
-          example: "America/New York"
+          example: 'America/New York'
           description: Time zone
-      type: object
 
     Location:
+      type: object
       properties:
         id:
           type: number
@@ -225,26 +232,25 @@ components:
           description: Unique identifier of the location
         name:
           type: string
-          example: "Headquarters"
+          example: 'Headquarters'
           description: Name of the location
         address:
-          $ref: "#/components/schemas/AddressWithTimeZone"
-      type: object
+          $ref: '#/components/schemas/AddressWithTimeZone'
     
     LocationsEmbeddedObject:
+      type: object
       properties:
         data:
           items:
-            $ref: "#/components/schemas/Location"
+            $ref: '#/components/schemas/Location'
           type: array
-      type: object
       description: Collection of location objects
 
     LocationEmbeddedObject:
+      type: object    
       properties:
         data:
-          $ref: "#/components/schemas/Location"
-      type: object
+          $ref: '#/components/schemas/Location'
       description: Location object
 
     AccountHalResponse:
@@ -267,10 +273,12 @@ components:
           example: 100        
           description: Total number of records
         _links:
-          $ref: "#/components/schemas/Links"
+          $ref: '#/components/schemas/Links'
         _embedded:
-          $ref: "#/components/schemas/AccountEmbeddedObject"        
+          $ref: '#/components/schemas/AccountEmbeddedObject'        
+    
     LocationHalResponse:
+      type: object
       properties:
         page_size:         
           type: number
@@ -289,11 +297,12 @@ components:
           example: 100        
           description: Total number of records
         _links:
-          $ref: "#/components/schemas/Links"
+          $ref: '#/components/schemas/Links'
         _embedded:
-          $ref: "#/components/schemas/LocationEmbeddedObject"
-      type: object
+          $ref: '#/components/schemas/LocationEmbeddedObject'
+
     LocationsHalResponse:
+      type: object
       properties:
         page_size:         
           type: number
@@ -308,9 +317,9 @@ components:
           type: number
           example: 100              
         _links:
-          $ref: "#/components/schemas/Links"
+          $ref: '#/components/schemas/Links'
         _embedded:
-          $ref: "#/components/schemas/LocationsEmbeddedObject"
-      type: object
+          $ref: '#/components/schemas/LocationsEmbeddedObject'
+      
 
   
