--- a/definitions/vonage-business-cloud/extension.yml
+++ b/definitions/vonage-business-cloud/extension.yml
@@ -5,17 +5,17 @@ info:
   title: Extension API
   description: Retrieve information about extensions.
   contact:
-    name: "Extension API"
-    url: "https://businesssupport.vonage.com/contactus"
+    name: 'Extension API'
+    url: 'https://businesssupport.vonage.com/contactus'
   license:
-    name: "Vonage"
-    url: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
+    name: 'Vonage'
+    url: 'https://www.vonage.com/business/legal-policy-center/business-cloud/tos'
 
 servers:
-- url: "https://api.vonage.com/t/vbc.prod/provisioning"
+- url: 'https://api.vonage.com/t/vbc.prod/provisioning'
 paths:
 
-  "/api/accounts/{account_id}/extensions":
+  '/api/accounts/{account_id}/extensions':
     get:
       operationId: ExtensionCtrl.getAccountExtensions
       parameters:
@@ -47,39 +47,39 @@ paths:
           schema:
             type: string
           description: Filter by phone number
-          example: "14155550100"
+          example: '14155550100'
         - in: query
           name: login_name
           required: false
           schema:
             type: string
           description: Filter by login name
-          example: "jsmith"
+          example: 'jsmith'
         - in: query
           name: email
           required: false
           schema:
             type: string
           description: Filter by email address
-          example: "john.smith@example.com"
+          example: 'john.smith@example.com'
       responses:
         '200':
           description: Success
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/EndUserRouteHalResponse"
+                $ref: '#/components/schemas/EndUserRouteHalResponse'
         '400':
           description: Invalid parameters given
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ValidationErrorsResponse"
+                $ref: '#/components/schemas/ValidationErrorsResponse'
       security:
         - bearerAuth: []
       summary: Get account extensions data by account ID
 
-  "/api/accounts/{account_id}/extensions/{extension_number}":
+  '/api/accounts/{account_id}/extensions/{extension_number}':
     get:
       operationId: ExtensionCtrl.getAccountExtensionByID
       parameters:
@@ -97,13 +97,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/EndUserRouteHalResponse"
+                $ref: '#/components/schemas/EndUserRouteHalResponse'
         '404':
           description: Extension not found
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorResponse"
+                $ref: '#/components/schemas/ErrorResponse'
       security:
         - bearerAuth: []
       summary: Get extension data by account ID and extension number
@@ -126,95 +126,101 @@ components:
 
   schemas:
     FirstHref:
+      type: object
       properties:
         href:
           type: string
       description: URL to the first page of records
     PrevHref:
+      type: object    
       properties:
         href:
           type: string
       description: URL to the previous page of records
     SelfHref:
+      type: object    
       properties:
         href:
           type: string
       description: URL to the current page of records
     NextHref:
+      type: object    
       properties:
         href:
           type: string
       description: URL to the next page of records
     LastHref:
+      type: object    
       properties:
         href:
           type: string
       description: URL to the last page of records
 
     Links:
+      type: object    
       properties:
         first:
-          $ref: "#/components/schemas/FirstHref"
+          $ref: '#/components/schemas/FirstHref'
         prev:
-          $ref: "#/components/schemas/PrevHref"
+          $ref: '#/components/schemas/PrevHref'
         self:
-          $ref: "#/components/schemas/SelfHref"
+          $ref: '#/components/schemas/SelfHref'
         next:
-          $ref: "#/components/schemas/NextHref"
-      type: object
+          $ref: '#/components/schemas/NextHref'
 
     BasicUser:
+      type: object    
       properties:
         email:
           type: string
           description: Email address of the user
-          example: "john.smith@example.com"
+          example: 'john.smith@example.com'
         login_name:
           type: string
           description: Login name of the user
-          example: "jsmith"
+          example: 'jsmith'
         first_name:
           type: string
           description: First name of the user
-          example: "John"
+          example: 'John'
         last_name:
           type: string
           description: Last name of the user
-          example: "Smith"
-      type: object
+          example: 'Smith'
 
     DID:
+      type: object    
       properties:
         phone_number:
           type: string
           description: Phone number
-          example: "14155550100"
+          example: '14155550100'
         custom_tag:
           type: string
           description: Custom tag associated with the phone number
-          example: "My Tag"
-      type: object
+          example: 'My Tag'
 
     Line:
+      type: object    
       properties:
         handset_name:
           type: string
           description: Name of the handset
-          example: "line1-VH1234567"
+          example: 'line1-VH1234567'
         sip_id:
           type: string
           description: SIP identifier of the handset
-          example: "VH1234567"
-      type: object
+          example: 'VH1234567'
 
     EndUserRoute:
+      type: object    
       properties:
         extension_number:
           type: string
           description: Extension number
-          example: "789"
+          example: '789'
         user:
-          $ref: "#/components/schemas/BasicUser"
+          $ref: '#/components/schemas/BasicUser'
         location_id:
           type: number
           description: Unique identifier of the assigned location
@@ -230,30 +236,30 @@ components:
         caller_id:
           type: string
           description: Caller ID of the extension
-          example: "John Smith"
+          example: 'John Smith'
         block_caller_id:
           type: boolean
           description: Block Caller ID status of the extension
           example: false
         dids:
           items:
-            $ref: "#/components/schemas/DID"
+            $ref: '#/components/schemas/DID'
           type: array
           description: Collection of phone numbers assigned to the extension
         extension_handsets:
           items:
-            $ref: "#/components/schemas/Line"
+            $ref: '#/components/schemas/Line'
           type: array
           description: Collection of handsets assigned to the extension
-      type: object
 
     EndUserRouteEmbeddedObject:
+      type: object    
       properties:
         data:
-          $ref: "#/components/schemas/EndUserRoute"
-      type: object
+          $ref: '#/components/schemas/EndUserRoute'
 
     EndUserRouteHalResponse:
+      type: object    
       properties:
         page_size:         
           type: number
@@ -272,12 +278,12 @@ components:
           example: 100        
           description: Total number of records
         _links:
-          $ref: "#/components/schemas/Links"
+          $ref: '#/components/schemas/Links'
         _embedded:
-          $ref: "#/components/schemas/EndUserRouteEmbeddedObject"
-      type: object
+          $ref: '#/components/schemas/EndUserRouteEmbeddedObject'
 
     ErrorResponse:
+      type: object    
       properties:
         msg:
           description: Error message
@@ -285,9 +291,9 @@ components:
         status:
           description: Http Response Code
           type: number
-      type: object
 
     ValidationErrorsResponse:
+      type: object    
       properties:
         status:
           description: Error status code
@@ -300,12 +306,12 @@ components:
           type: string
         invalid_parameters:
           items:
-            $ref: "#/components/schemas/DetailedInvalidParam"
+            $ref: '#/components/schemas/DetailedInvalidParam'
           description: Invalid parameters and their reason for failing
           type: array
-      type: object
 
     DetailedInvalidParam:
+      type: object    
       properties:
         name:
           type: string
@@ -313,5 +319,3 @@ components:
         reason:
           type: string
           description: Invalid property reason
-      type: object
-
