--- a/definitions/vonage-business-cloud/user.yml
+++ b/definitions/vonage-business-cloud/user.yml
@@ -5,17 +5,17 @@ info:
   title: User API
   description: Retrieve information about users.
   contact:
-    name: "User API"
-    url: "https://businesssupport.vonage.com/contactus"
+    name: 'User API'
+    url: 'https://businesssupport.vonage.com/contactus'
   license:
-    name: "Vonage"
-    url: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
+    name: 'Vonage'
+    url: 'https://www.vonage.com/business/legal-policy-center/business-cloud/tos'
 
 servers:
-- url: "https://api.vonage.com/t/vbc.prod/provisioning"
+- url: 'https://api.vonage.com/t/vbc.prod/provisioning'
 paths:
 
-  "/api/accounts/{account_id}/users":
+  '/api/accounts/{account_id}/users':
     get:
       operationId: UserCtrl.getUsers
       parameters:
@@ -40,46 +40,46 @@ paths:
           schema:
             type: string
           description: Filter by first name
-          example: "John"
+          example: 'John'
         - in: query
           name: last_name
           required: false
           schema:
             type: string
           description: Filter by last name
-          example: "Smith"
+          example: 'Smith'
         - in: query
           name: login_name
           required: false
           schema:
             type: string
           description: Filter by login name
-          example: "jsmith"          
+          example: 'jsmith'          
         - in: query
           name: email
           required: false
           schema:
             type: string
           description: Filter by email address
-          example: "john.smith@example.com"
+          example: 'john.smith@example.com'
       responses:
         '200':
           description: Success
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/UsersHalResponse"
+                $ref: '#/components/schemas/UsersHalResponse'
         '400':
           description: Invalid parameters given
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ValidationErrorsResponse"                
+                $ref: '#/components/schemas/ValidationErrorsResponse'                
       security:
         - bearerAuth: []
       summary: Get account users data by account ID
 
-  "/api/accounts/{account_id}/users/{user_id}":
+  '/api/accounts/{account_id}/users/{user_id}':
     get:
       operationId: UserCtrl.getUserByID
       parameters:
@@ -96,13 +96,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/UserHalResponse"
+                $ref: '#/components/schemas/UserHalResponse'
         '404':
           description: User not found
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorResponse"
+                $ref: '#/components/schemas/ErrorResponse'
       security:
         - bearerAuth: []
       summary: Get user data by account ID and user ID
@@ -125,117 +125,123 @@ components:
 
   schemas:
     FirstHref:
+      type: object
       properties:
         href:
           type: string
       description: URL to the first page of records
     PrevHref:
+      type: object    
       properties:
         href:
           type: string
       description: URL to the previous page of records
     SelfHref:
+      type: object    
       properties:
         href:
           type: string
       description: URL to the current page of records
     NextHref:
+      type: object    
       properties:
         href:
           type: string
       description: URL to the next page of records
     LastHref:
+      type: object    
       properties:
         href:
           type: string
       description: URL to the last page of records
 
     Links:
+      type: object    
       properties:
         first:
-          $ref: "#/components/schemas/FirstHref"
+          $ref: '#/components/schemas/FirstHref'
         prev:
-          $ref: "#/components/schemas/PrevHref"
+          $ref: '#/components/schemas/PrevHref'
         self:
-          $ref: "#/components/schemas/SelfHref"
+          $ref: '#/components/schemas/SelfHref'
         next:
-          $ref: "#/components/schemas/NextHref"
-      type: object
+          $ref: '#/components/schemas/NextHref'
 
     Contact:
+      type: object    
       properties:
         type:
           type: string
           description: Contact type
-          example: "Home"
+          example: 'Home'
         value:
           type: string
           description: Contact value
-          example: "14155550100"
-      type: object
+          example: '14155550100'
 
     UserExtension:
+      type: object    
       properties:
         dids:
           items:
-            $ref: "#/components/schemas/DID"
+            $ref: '#/components/schemas/DID'
           type: array
           description: Collection of phone numbers assigned to the extension
         extension_number:
           type: string
           description: Extension number
-          example: "789"
-      type: object
+          example: '789'
 
     User:
+      type: object    
       properties:
         email:
           type: string
           description: Email address of the user
-          example: "john.smith@example.com"
+          example: 'john.smith@example.com'
         login_name:
           type: string
           description: Login name of the user
-          example: "jsmith"
+          example: 'jsmith'
         first_name:
           type: string
           description: First name of the user
-          example: "John"
+          example: 'John'
         last_name:
           type: string
           description: Last name of the user
-          example: "Smith"
+          example: 'Smith'
         id:
           type: number
           description: Unique identifier of the user
           example: 1234567
         contact_numbers:
           items:
-            $ref: "#/components/schemas/Contact"
+            $ref: '#/components/schemas/Contact'
           type: array
           description: Collection of contact objects
         extensions:
           items:
-            $ref: "#/components/schemas/UserExtension"
+            $ref: '#/components/schemas/UserExtension'
           type: array
           description: Collection of extension objects
-      type: object
 
     UsersEmbeddedObject:
+      type: object    
       properties:
         data:
           items:
-            $ref: "#/components/schemas/User"
+            $ref: '#/components/schemas/User'
           type: array
-      type: object
 
     UserEmbeddedObject:
+      type: object    
       properties:
         data:
-          $ref: "#/components/schemas/User"
-      type: object
+          $ref: '#/components/schemas/User'
 
     UserHalResponse:
+      type: object    
       properties:
         page_size:         
           type: number
@@ -254,12 +260,12 @@ components:
           example: 100        
           description: Total number of records
         _links:
-          $ref: "#/components/schemas/Links"
+          $ref: '#/components/schemas/Links'
         _embedded:
-          $ref: "#/components/schemas/UserEmbeddedObject"
-      type: object
+          $ref: '#/components/schemas/UserEmbeddedObject'
 
     UsersHalResponse:
+      type: object    
       properties:
         page_size:         
           type: number
@@ -278,24 +284,24 @@ components:
           example: 100        
           description: Total number of records
         _links:
-          $ref: "#/components/schemas/Links"
+          $ref: '#/components/schemas/Links'
         _embedded:
-          $ref: "#/components/schemas/UsersEmbeddedObject"
-      type: object
+          $ref: '#/components/schemas/UsersEmbeddedObject'
 
     DID:
+      type: object    
       properties:
         phone_number:
           type: string
           description: Phone number
-          example: "14155550100"
+          example: '14155550100'
         custom_tag:
           type: string
           description: Custom tag associated with the phone number
           example: My Tag
-      type: object
 
     ErrorResponse:
+      type: object    
       properties:
         msg:
           description: Error message
@@ -303,9 +309,9 @@ components:
         status:
           description: Http Response Code
           type: number
-      type: object
 
     ValidationErrorsResponse:
+      type: object    
       properties:
         status:
           description: Error status code
@@ -318,12 +324,12 @@ components:
           type: string
         invalid_parameters:
           items:
-            $ref: "#/components/schemas/DetailedInvalidParam"
+            $ref: '#/components/schemas/DetailedInvalidParam'
           description: Invalid parameters and their reason for failing
           type: array
-      type: object
 
     DetailedInvalidParam:
+      type: object
       properties:
         name:
           type: string
@@ -331,4 +337,3 @@ components:
         reason:
           type: string
           description: Invalid property reason
-      type: object      
