Changed message for messages in product description and removed workflow
Workflow is not supported for Redact API and message is an invalid product description. It should be messages

--- a/definitions/redact.yml
+++ b/definitions/redact.yml
@@ -275,8 +275,7 @@ components:
          - number-insight
          - verify
          - verify-sdk
-         - message
-         - workflow
+         - messages
        type:
          type: string
          enum:
