--- a/definitions/application.v2.yml
+++ b/definitions/application.v2.yml
@@ -188,13 +188,13 @@ paths:
         '400':
           $ref: '#/components/responses/InvalidPayloadError'
         '401':
-          $ref: '../shared_errors.yml#/components/responses/BadCredentialsError'
+          $ref: 'common/common_errors.yml#/components/responses/BadCredentialsError'
         '405':
-          $ref: '../shared_errors.yml#/components/responses/InvalidRequestMethod'
+          $ref: 'common/common_errors.yml#/components/responses/InvalidRequestMethod'
         '406':
-          $ref: '../shared_errors.yml#/components/responses/InvalidAcceptHeader'
+          $ref: 'common/common_errors.yml#/components/responses/InvalidAcceptHeader'
         '415':
-          $ref: '../shared_errors.yml#/components/responses/UnsupportedContentTypeHeader'
+          $ref: 'common/common_errors.yml#/components/responses/UnsupportedContentTypeHeader'
 
     get:
       operationId: listApplication
@@ -269,13 +269,13 @@ paths:
                           type: string
                           example: must be between 1 and 100
                   instance:
-                    $ref: '../shared_errors.yml#/components/fields/instance'
+                    $ref: 'common/common_errors.yml#/components/fields/instance'
         '401':
-          $ref: '../shared_errors.yml#/components/responses/BadCredentialsError'
+          $ref: 'common/common_errors.yml#/components/responses/BadCredentialsError'
         '405':
-          $ref: '../shared_errors.yml#/components/responses/InvalidRequestMethod'
+          $ref: 'common/common_errors.yml#/components/responses/InvalidRequestMethod'
         '406':
-          $ref: '../shared_errors.yml#/components/responses/InvalidAcceptHeader'
+          $ref: 'common/common_errors.yml#/components/responses/InvalidAcceptHeader'
 
   /v2/applications/{id}:
     parameters:
@@ -297,13 +297,13 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApplicationResponse'
         '401':
-          $ref: '../shared_errors.yml#/components/responses/BadCredentialsError'
+          $ref: 'common/common_errors.yml#/components/responses/BadCredentialsError'
         '404':
-          $ref: '../shared_errors.yml#/components/responses/NotFoundError'
+          $ref: 'common/common_errors.yml#/components/responses/NotFoundError'
         '405':
-          $ref: '../shared_errors.yml#/components/responses/InvalidRequestMethod'
+          $ref: 'common/common_errors.yml#/components/responses/InvalidRequestMethod'
         '406':
-          $ref: '../shared_errors.yml#/components/responses/InvalidAcceptHeader'
+          $ref: 'common/common_errors.yml#/components/responses/InvalidAcceptHeader'
 
     put:
       summary: Update an application
@@ -476,15 +476,15 @@ paths:
         '400':
           $ref: '#/components/responses/InvalidPayloadError'
         '401':
-          $ref: '../shared_errors.yml#/components/responses/BadCredentialsError'
+          $ref: 'common/common_errors.yml#/components/responses/BadCredentialsError'
         '404':
-          $ref: '../shared_errors.yml#/components/responses/NotFoundError'
+          $ref: 'common/common_errors.yml#/components/responses/NotFoundError'
         '405':
-          $ref: '../shared_errors.yml#/components/responses/InvalidRequestMethod'
+          $ref: 'common/common_errors.yml#/components/responses/InvalidRequestMethod'
         '406':
-          $ref: '../shared_errors.yml#/components/responses/InvalidAcceptHeader'
+          $ref: 'common/common_errors.yml#/components/responses/InvalidAcceptHeader'
         '415':
-          $ref: '../shared_errors.yml#/components/responses/UnsupportedContentTypeHeader'
+          $ref: 'common/common_errors.yml#/components/responses/UnsupportedContentTypeHeader'
     delete:
       operationId: deleteApplication
       summary: Delete an application
@@ -495,13 +495,13 @@ paths:
         '204':
           description: Success
         '401':
-          $ref: '../shared_errors.yml#/components/responses/BadCredentialsError'
+          $ref: 'common/common_errors.yml#/components/responses/BadCredentialsError'
         '404':
-          $ref: '../shared_errors.yml#/components/responses/NotFoundError'
+          $ref: 'common/common_errors.yml#/components/responses/NotFoundError'
         '405':
-          $ref: '../shared_errors.yml#/components/responses/InvalidRequestMethod'
+          $ref: 'common/common_errors.yml#/components/responses/InvalidRequestMethod'
         '406':
-          $ref: '../shared_errors.yml#/components/responses/InvalidAcceptHeader'
+          $ref: 'common/common_errors.yml#/components/responses/InvalidAcceptHeader'
 
 tags:
   - name: Application
@@ -540,7 +540,7 @@ components:
                       type: string
                       example: 'must be one of: GET, POST'
               instance:
-                $ref: '../shared_errors.yml#/components/fields/instance'
+                $ref: 'common/common_errors.yml#/components/fields/instance'
  
   schemas:
     ApplicationResponse:
